// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconMailAlert /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconMailAlert /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconMailAlert /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconMailAlert /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconMailAlert /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconMailAlert /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconMailAlert /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconMailAlert /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 350 256"
    width="1.3671875em"
  >
     
    <path
      d="M233 46.5l-102.9 93-101.9-93H233zm-63.9 73.8l64.7 70.4-7.4 9-65.8-71.7-30.5 27.6-30.6-27.9L34 199.3l-7.4-9L91 119.9 23 57.7v151.8h215V58.1l-68.9 62.2zM327 46.5h-89v12h89v-12zm-14 37h-75v12h75v-12zm-17 38h-58v11h58v-11zm-14 38h-44v12h44v-12zm-17 38h-27v12h27v-12z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconMailAlert /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
